{
  "version": 4,
  "terraform_version": "1.2.9",
  "serial": 2336,
  "lineage": "bc161195-7774-1177-82ad-f56001af2e91",
  "resources": [
    {
      "module": "module.beanstalk",
      "mode": "data",
      "type": "aws_lb",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:884878220922:loadbalancer/app/awseb--AWSEB-Apdi6G8imhfQ/7871b3379c770be1",
            "arn_suffix": "app/awseb--AWSEB-Apdi6G8imhfQ/7871b3379c770be1",
            "desync_mitigation_mode": "defensive",
            "dns_name": "awseb--AWSEB-Apdi6G8imhfQ-709082568.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:884878220922:loadbalancer/app/awseb--AWSEB-Apdi6G8imhfQ/7871b3379c770be1",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "awseb--AWSEB-Apdi6G8imhfQ",
            "security_groups": [
              "sg-0c087152bef9b6cbd",
              "sg-0ddd62ea024777416"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0055821a14ba6426e"
              },
              {
                "subnet_id": "subnet-01ec084b93589b74c"
              }
            ],
            "subnets": [
              "subnet-0055821a14ba6426e",
              "subnet-01ec084b93589b74c"
            ],
            "tags": {
              "Name": "swapapp-dev-dev",
              "elasticbeanstalk:environment-id": "e-8jh55e2tug",
              "elasticbeanstalk:environment-name": "swapapp-dev-dev",
              "environment-name": "swapapp-dev-dev"
            },
            "vpc_id": "vpc-035ed49b3d80ac227",
            "zone_id": "Z32O12XQLNTSW2"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "internal_ebslab_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:884878220922:route-table/rtb-0310f0f71230a3234",
            "default_route_table_id": "rtb-0310f0f71230a3234",
            "id": "rtb-0310f0f71230a3234",
            "owner_id": "884878220922",
            "propagating_vgws": null,
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05392a0ae76dea600",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ebs-lab"
            },
            "tags_all": {
              "Name": "ebs-lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-035ed49b3d80ac227"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.ebslab_gw",
            "module.vpc.aws_vpc.ebslab_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ebslab_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:884878220922:internet-gateway/igw-05392a0ae76dea600",
            "id": "igw-05392a0ae76dea600",
            "owner_id": "884878220922",
            "tags": {
              "Name": "ebs-lab"
            },
            "tags_all": {
              "Name": "ebs-lab"
            },
            "vpc_id": "vpc-035ed49b3d80ac227"
          },
          "dependencies": [
            "module.vpc.aws_vpc.ebslab_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08f5293f10c3ef2a8",
            "route_table_id": "rtb-0310f0f71230a3234",
            "subnet_id": "subnet-01ec084b93589b74c"
          },
          "dependencies": [
            "module.vpc.aws_default_route_table.internal_ebslab_default",
            "module.vpc.aws_internet_gateway.ebslab_gw",
            "module.vpc.aws_subnet.ebslab_subnets",
            "module.vpc.aws_vpc.ebslab_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ad1cc0cb7ab7db01",
            "route_table_id": "rtb-0310f0f71230a3234",
            "subnet_id": "subnet-0055821a14ba6426e"
          },
          "dependencies": [
            "module.vpc.aws_default_route_table.internal_ebslab_default",
            "module.vpc.aws_internet_gateway.ebslab_gw",
            "module.vpc.aws_subnet.ebslab_subnets",
            "module.vpc.aws_vpc.ebslab_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ebslab_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:884878220922:security-group/sg-0c087152bef9b6cbd",
            "description": "Security group for Elastic Beanstalk",
            "egress": [],
            "id": "sg-0c087152bef9b6cbd",
            "ingress": [],
            "name": "swapapp-dev-sg",
            "name_prefix": "",
            "owner_id": "884878220922",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-035ed49b3d80ac227"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.ebslab_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ebslab_security_group_rule_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 80,
            "id": "sgrule-2564617021",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c087152bef9b6cbd",
            "self": false,
            "source_security_group_id": "sg-0c087152bef9b6cbd",
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.ebslab_security_group",
            "module.vpc.aws_vpc.ebslab_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ebslab_security_group_rule_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-592614420",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c087152bef9b6cbd",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.ebslab_security_group",
            "module.vpc.aws_vpc.ebslab_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ebslab_security_group_rule_ssl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-4085710998",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c087152bef9b6cbd",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.ebslab_security_group",
            "module.vpc.aws_vpc.ebslab_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "internal_mysql_communication",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3306,
            "id": "sgrule-2838047466",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c087152bef9b6cbd",
            "self": false,
            "source_security_group_id": "sg-0c087152bef9b6cbd",
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.ebslab_security_group",
            "module.vpc.aws_vpc.ebslab_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ebslab_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:884878220922:subnet/subnet-01ec084b93589b74c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01ec084b93589b74c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "884878220922",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-Subnet"
            },
            "tags_all": {
              "Name": "Public-Subnet"
            },
            "vpc_id": "vpc-035ed49b3d80ac227"
          },
          "dependencies": [
            "module.vpc.aws_vpc.ebslab_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:884878220922:subnet/subnet-0055821a14ba6426e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0055821a14ba6426e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "884878220922",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-Subnet"
            },
            "tags_all": {
              "Name": "Public-Subnet"
            },
            "vpc_id": "vpc-035ed49b3d80ac227"
          },
          "dependencies": [
            "module.vpc.aws_vpc.ebslab_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:884878220922:subnet/subnet-0ea4e1fd7570b534d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ea4e1fd7570b534d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "884878220922",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-Subnet"
            },
            "tags_all": {
              "Name": "Private-Subnet"
            },
            "vpc_id": "vpc-035ed49b3d80ac227"
          },
          "dependencies": [
            "module.vpc.aws_vpc.ebslab_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:884878220922:subnet/subnet-0014540d42edbfbd7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0014540d42edbfbd7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "884878220922",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-Subnet"
            },
            "tags_all": {
              "Name": "Private-Subnet"
            },
            "vpc_id": "vpc-035ed49b3d80ac227"
          },
          "dependencies": [
            "module.vpc.aws_vpc.ebslab_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ebslab_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:884878220922:vpc/vpc-035ed49b3d80ac227",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-076ff5af1ecb547a9",
            "default_route_table_id": "rtb-0310f0f71230a3234",
            "default_security_group_id": "sg-014ed8bf95dce5959",
            "dhcp_options_id": "dopt-034758b73da6235d6",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-035ed49b3d80ac227",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0310f0f71230a3234",
            "owner_id": "884878220922",
            "tags": {
              "Name": "ebs-lab"
            },
            "tags_all": {
              "Name": "ebs-lab"
            }
          }
        }
      ]
    }
  ]
}